@@ -15,16 +15,21 @@ import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-class TestCollectionsAddAll extends AbstractCheckTest {
-    private static final String LOCALIZED_MESSAGE_KEY = "common-reimplementation";
-    private static final List<ProblemType> PROBLEM_TYPES = List.of(ProblemType.COLLECTION_ADD_ALL, ProblemType.COMMON_REIMPLEMENTATION_ADD_ENUM_VALUES);
+class TestCollectionAddAll extends AbstractCheckTest {
+    private static final List<ProblemType> PROBLEM_TYPES = List.of(
+        ProblemType.COLLECTION_ADD_ALL,
+        ProblemType.COMMON_REIMPLEMENTATION_ADD_ENUM_VALUES,
+        ProblemType.COMMON_REIMPLEMENTATION_ADD_ALL
+    );
 
-    private void assertReimplementation(Problem problem, String suggestion) {
+    private void assertEqualsReimplementation(Problem problem, String suggestion) {
         assertEquals(
             this.linter.translateMessage(
                 new LocalizedMessage(
-                    LOCALIZED_MESSAGE_KEY,
-                    Map.of("suggestion", suggestion)
+                    "common-reimplementation",
+                    Map.of(
+                        "suggestion", suggestion
+                    )
                 )),
             this.linter.translateMessage(problem.getExplanation())
         );
@@ -48,7 +53,7 @@ class TestCollectionsAddAll extends AbstractCheckTest {
                 """
         ), PROBLEM_TYPES);
 
-        assertReimplementation(problems.next(), "list.addAll(List.of(\" \", \"a\", \"b\"))");
+        assertEqualsReimplementation(problems.next(), "list.addAll(List.of(\" \", \"a\", \"b\"))");
 
         problems.assertExhausted();
     }
@@ -81,7 +86,7 @@ class TestCollectionsAddAll extends AbstractCheckTest {
                 """
         ), PROBLEM_TYPES);
 
-        assertReimplementation(problems.next(), "fruits.addAll(Arrays.asList(Fruit.values()))");
+        assertEqualsReimplementation(problems.next(), "fruits.addAll(Arrays.asList(Fruit.values()))");
         problems.assertExhausted();
     }
 
@@ -164,10 +169,90 @@ class TestCollectionsAddAll extends AbstractCheckTest {
                 """
         ), PROBLEM_TYPES);
 
-        assertReimplementation(problems.next(), "availableCards.addAll(Arrays.asList(GodCard.values()))");
-        assertReimplementation(problems.next(), "availableCards.addAll(List.of(GodCard.HERMES, GodCard.DEMETER, GodCard.ATLAS, GodCard.APOLLO, GodCard.ATHENA, GodCard.ARTEMIS))");
-        assertReimplementation(problems.next(), "availableCards.addAll(List.of(GodCard.APOLLO, GodCard.ARTEMIS, GodCard.ATHENA, GodCard.ATLAS, GodCard.ATLAS, GodCard.DEMETER, GodCard.HERMES))");
-        assertReimplementation(problems.next(), "availableCards.addAll(List.of(GodCard.APOLLO, GodCard.ARTEMIS, GodCard.ATHENA, GodCard.ATLAS, GodCard.DEMETER, GodCard.HERMES, GodCard.HERMES))");
+        assertEqualsReimplementation(problems.next(), "availableCards.addAll(Arrays.asList(GodCard.values()))");
+        assertEqualsReimplementation(problems.next(), "availableCards.addAll(List.of(GodCard.HERMES, GodCard.DEMETER, GodCard.ATLAS, GodCard.APOLLO, GodCard.ATHENA, GodCard.ARTEMIS))");
+        assertEqualsReimplementation(problems.next(), "availableCards.addAll(List.of(GodCard.APOLLO, GodCard.ARTEMIS, GodCard.ATHENA, GodCard.ATLAS, GodCard.ATLAS, GodCard.DEMETER, GodCard.HERMES))");
+        assertEqualsReimplementation(problems.next(), "availableCards.addAll(List.of(GodCard.APOLLO, GodCard.ARTEMIS, GodCard.ATHENA, GodCard.ATLAS, GodCard.DEMETER, GodCard.HERMES, GodCard.HERMES))");
+        problems.assertExhausted();
+    }
+
+    @Test
+    void testAddAllArray() throws LinterException, IOException {
+        ProblemIterator problems = this.checkIterator(StringSourceInfo.fromSourceString(
+            JavaVersion.JAVA_17,
+            "Main",
+            """
+                import java.util.Collection;
+                import java.util.ArrayList;
+
+                public class Main {
+                    public static <T> Collection<T> toCollection(T[] array) {
+                        Collection<T> result = new ArrayList<>();
+                        
+                        for (T element : array) {
+                            result.add(element);
+                        }
+                        
+                        return result;
+                    }
+                }
+                """
+        ), PROBLEM_TYPES);
+
+        assertEqualsReimplementation(problems.next(), "result.addAll(Arrays.asList(array))");
+        problems.assertExhausted();
+    }
+
+    @Test
+    void testAddAllCollection() throws LinterException, IOException {
+        ProblemIterator problems = this.checkIterator(StringSourceInfo.fromSourceString(
+            JavaVersion.JAVA_17,
+            "Main",
+            """
+                import java.util.Collection;
+                import java.util.ArrayList;
+
+                public class Main {
+                    public static <T> Collection<T> toCollection(Iterable<T> input) {
+                        Collection<T> result = new ArrayList<>();
+                        
+                        for (T element : input) {
+                            result.add(element);
+                        }
+
+                        return result;
+                    }
+                }
+                """
+        ), PROBLEM_TYPES);
+
+        assertEqualsReimplementation(problems.next(), "result.addAll(input)");
+        problems.assertExhausted();
+    }
+
+    @Test
+    void testAddAllCast() throws LinterException, IOException {
+        ProblemIterator problems = this.checkIterator(StringSourceInfo.fromSourceString(
+            JavaVersion.JAVA_17,
+            "Main",
+            """
+                import java.util.Collection;
+                import java.util.ArrayList;
+
+                public class Main {
+                    public static <T, U> Collection<U> toCollection(Iterable<T> input) {
+                        Collection<U> result = new ArrayList<>();
+                        
+                        for (T element : input) {
+                            result.add((U) element);
+                        }
+
+                        return result;
+                    }
+                }
+                """
+        ), PROBLEM_TYPES);
+
         problems.assertExhausted();
     }
 }
